--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
 
   <title>Gallery</title>
   <link rel="stylesheet" href="css/bootstrap.css?v=1.0">
-  <script src="D:/portfolio/new portfolio_idc/blogsite/bootstrap-3.3.7-dist/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+  <script src="js/bootstrap.js"></script>
 </head>
 
 <body>
